--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <p>1</p>
-    
+    <header class="header">
+        <a><span><img class="logo" src="img/logo.png" alt="Logo"></span>
+            <span class="text-logo">SpzGen!</span>
+        </a>
+    </header>    
 </body>
 
 
