Залил голову и тело проекта
внес стили для заголовка

--- a/index.html
+++ b/index.html
@@ -6,12 +6,93 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <header class="header">
-        <a><span><img class="logo" src="img/logo.png" alt="Logo"></span>
-            <span class="text-logo">SpzGen!</span>
-        </a>
-    </header>    
+    <header>
+        <div class="logo">
+            <img src="img/logo.png" alt="Logo" height="60px">
+        </div>
+        <div class="text-logo">
+            SpzGen!
+        </div>
+    </header>
+    <article>
+        <h1>Начало</h1>
+        <p>Первый абзац
+
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+
+        Первый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+
+        Первый абзац
+
+        Первый абзацПервый абзацПервый абзацПервый абзацПервый абзац
+
+
+
+
+        Первый абзацПервый абзац</p>
+</article>
 </body>
+
 
 
 
